# game-of-life

./: Cargo.toml  main.rs
src/: bench.rs  lib.rs  main.rs
