[package]
name = "game-of-life-2"
version = "0.1.0"
authors = ["Yura Frozen <yurafrozen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-integer = "1.2.1"
macroquad = { git = "https://github.com/not-fl3/macroquad", version = "0.2.1" }